// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1 Default Render 1`] = `
<div>
  <div
    class="MuiBox-root css-15nespj"
  >
    <h6
      class="MuiTypography-root MuiTypography-h6 css-46493x-MuiTypography-root"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-zrtylm-MuiSvgIcon-root"
        data-testid="TollIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M15 4c-4.42 0-8 3.58-8 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm0 14c-3.31 0-6-2.69-6-6s2.69-6 6-6 6 2.69 6 6-2.69 6-6 6zM3 12c0-2.61 1.67-4.83 4-5.65V4.26C3.55 5.15 1 8.27 1 12s2.55 6.85 6 7.74v-2.09c-2.33-.82-4-3.04-4-5.65z"
        />
      </svg>
       
      Coins
    </h6>
  </div>
</div>
`;

exports[`2 Render with children 1`] = `
<div>
  <div
    class="MuiBox-root css-15nespj"
  >
    <h6
      class="MuiTypography-root MuiTypography-h6 css-46493x-MuiTypography-root"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-zrtylm-MuiSvgIcon-root"
        data-testid="TollIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M15 4c-4.42 0-8 3.58-8 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm0 14c-3.31 0-6-2.69-6-6s2.69-6 6-6 6 2.69 6 6-2.69 6-6 6zM3 12c0-2.61 1.67-4.83 4-5.65V4.26C3.55 5.15 1 8.27 1 12s2.55 6.85 6 7.74v-2.09c-2.33-.82-4-3.04-4-5.65z"
        />
      </svg>
       
      Coins
    </h6>
    <span>
      lorem ipsum dolor sit amet
    </span>
  </div>
</div>
`;
